CSV/grammar/CSV.g4
grammar CSV;

csvFile : hdr row+ ;
hdr : row ;

row : field (',' field)* '\r'? '\n' ;

field
    : TEXT    // not in quotes
    | STRING  // in quotes
    |         // empty
    ;

TEXT   : ~[,\n\r"]+ ;
STRING : '"' ('""'|~'"')* '"' ; // quote-quote is an escaped quote
